# 3D-renderer

./: .clang-format  CMakeLists.txt  README.md  application.cpp  application.h  main.cpp
common/: geometry.cpp  geometry.h  object.cpp  object.h
components/: graphics.cpp  graphics.h  visualizer.cpp  visualizer.h  world.cpp  world.h
